--- a/DriveSystemWebApplicationAPI/DriveSystemWebApplication/DriveSystemWebApplication.csproj
+++ b/DriveSystemWebApplicationAPI/DriveSystemWebApplication/DriveSystemWebApplication.csproj
@@ -22,6 +22,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
