--- a/DriveSystemWebApplicationAPI/DriveSystemWebApplication/Properties/launchSettings.json
+++ b/DriveSystemWebApplicationAPI/DriveSystemWebApplication/Properties/launchSettings.json
@@ -16,7 +16,8 @@
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5069",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "Path": "C:\Program Files\Redis"
       }
     },
     "IIS Express": {
@@ -24,7 +25,8 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "Path": "C:\\Program Files\\Redis"
       }
     }
   }
